[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/bvh_import/main.gd" type="Script" id=1]

[sub_resource type="ButtonGroup" id=1]
resource_name = "AxisOrderingGroup"

[node name="BVHImport" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
bone_remapping = {

}

[node name="FileDialog" type="FileDialog" parent="."]
margin_right = 480.0
margin_bottom = 320.0
rect_min_size = Vector2( 480, 320 )
window_title = "Open a File"
mode = 0
access = 2
filters = PoolStringArray( "*.bvh ; Biovision Hierarchy", "*.bvh ; Biovision Hierarchy" )
current_dir = "E:/GodotProjects/godot-bvh-import"
current_path = "E:/GodotProjects/godot-bvh-import/"

[node name="ArmatureNameLabel" type="Label" parent="."]
margin_right = 1024.0
margin_bottom = 14.0
text = "Armature Name:"

[node name="ArmatureNameInput" type="LineEdit" parent="."]
margin_top = 18.0
margin_right = 1024.0
margin_bottom = 42.0
size_flags_horizontal = 3
text = "Armature"
placeholder_text = "Armature Name"

[node name="AnimationPlayerLabel" type="Label" parent="."]
margin_top = 46.0
margin_right = 1024.0
margin_bottom = 60.0
text = "Animation Player Name:"

[node name="AnimationPlayerNameInput" type="LineEdit" parent="."]
margin_top = 64.0
margin_right = 1024.0
margin_bottom = 88.0
size_flags_horizontal = 3
text = "AnimationPlayer"
placeholder_text = "AnimtionPlayer"

[node name="NewAnimNameLabel" type="Label" parent="."]
margin_top = 92.0
margin_right = 1024.0
margin_bottom = 106.0
text = "New Animation Name:"

[node name="AnimationNameInput" type="LineEdit" parent="."]
margin_top = 110.0
margin_right = 1024.0
margin_bottom = 134.0
size_flags_horizontal = 3
text = "BVH Animation 00"
placeholder_text = "Animtion Name"

[node name="HSeparator" type="HSeparator" parent="."]
margin_top = 138.0
margin_right = 1024.0
margin_bottom = 142.0

[node name="ShowImportTweaks" type="CheckButton" parent="."]
margin_top = 146.0
margin_right = 1024.0
margin_bottom = 186.0
text = "Show Import Tweaks"

[node name="ImportTweaks" type="VBoxContainer" parent="."]
margin_top = 190.0
margin_right = 1024.0
margin_bottom = 340.0

[node name="AxisLabel" type="Label" parent="ImportTweaks"]
margin_right = 1024.0
margin_bottom = 14.0
text = "Axis Ordering:"

[node name="AxisOrderingOption" type="OptionButton" parent="ImportTweaks"]
margin_top = 18.0
margin_right = 1024.0
margin_bottom = 38.0
group = SubResource( 1 )
text = "Axis Ordering"

[node name="ReverseAxisOrder" type="CheckBox" parent="ImportTweaks"]
margin_top = 42.0
margin_right = 1024.0
margin_bottom = 66.0
text = "Reverse Native Axis Order"

[node name="ForwardAxisLabel" type="Label" parent="ImportTweaks"]
margin_top = 70.0
margin_right = 1024.0
margin_bottom = 84.0
text = "Forward Vector:"

[node name="ForwardAxisOption" type="OptionButton" parent="ImportTweaks"]
margin_top = 88.0
margin_right = 1024.0
margin_bottom = 108.0
group = SubResource( 1 )

[node name="UpAxisLabel" type="Label" parent="ImportTweaks"]
margin_top = 112.0
margin_right = 1024.0
margin_bottom = 126.0
text = "Up Vector:"

[node name="UpAxisOption" type="OptionButton" parent="ImportTweaks"]
margin_top = 130.0
margin_right = 1024.0
margin_bottom = 150.0
group = SubResource( 1 )

[node name="HSeparator2" type="HSeparator" parent="."]
margin_top = 344.0
margin_right = 1024.0
margin_bottom = 348.0

[node name="ShowBoneRetargeting" type="CheckButton" parent="."]
margin_top = 352.0
margin_right = 1024.0
margin_bottom = 392.0
disabled = true
text = "Show Bone Retargeting Options"

[node name="HSeparator3" type="HSeparator" parent="."]
margin_top = 396.0
margin_right = 1024.0
margin_bottom = 400.0

[node name="ImportButton" type="Button" parent="."]
margin_top = 404.0
margin_right = 1024.0
margin_bottom = 424.0
text = "Import"

[node name="ReimportButton" type="Button" parent="."]
margin_top = 428.0
margin_right = 1024.0
margin_bottom = 448.0
disabled = true
text = "Reimport"
